# algorithms_1st

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: clang-format.yaml  clang-tidy-post.yaml  clang-tidy-review.yaml  cmake.yaml
additional_tasks/: CMakeLists.txt
additional_tasks/find_sum_numbers/: CMakeLists.txt  README.md
additional_tasks/find_sum_numbers/src/: test.cpp  utils.cpp  utils.hpp
additional_tasks/temperature/: CMakeLists.txt
additional_tasks/temperature/src/: test.cpp  utils.cpp  utils.hpp
sandbox/: CMakeLists.txt  README.md
sandbox/src/: main.cpp  test.cpp
task_01/: CMakeLists.txt  README.md
task_01/src/: main.cpp  sort.cpp  sort.hpp  stack.cpp  stack.hpp  test.cpp
task_02/: CMakeLists.txt  README.md
task_02/src/: heap.cpp  heap.hpp  main.cpp  stack.cpp  stack.hpp  test.cpp
task_03/: CMakeLists.txt  README.md
task_03/src/: sort.cpp  sort.hpp  test.cpp
task_04/: CMakeLists.txt  README.md
task_04/src/: order_statistics.cpp  order_statistics.hpp  test.cpp
task_05/: CMakeLists.txt  README.md
task_05/binary_tree/: node.hpp  tree.hpp
task_05/src/: main.cpp  node.hpp  test.cpp  tree.cpp  tree.hpp
task_06/: CMakeLists.txt
task_06/src/: hashtable.cpp  hashtable.hpp  test.cpp
