cmake_minimum_required(VERSION 3.10)

project(homeworks)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/task_01)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/task_02)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/task_03)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/task_04)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/task_05)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/task_06)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sandbox)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/additional_tasks)
